<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/haveaccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextBtn"
        app:layout_constraintVertical_bias="0.189" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="186dp"
        android:layout_height="41dp"
        android:background="@color/darkbluegreen"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create"
        android:textColor="@color/lemongreen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassEditTxt"
        app:layout_constraintVertical_bias="0.168" />

    <EditText
        android:id="@+id/passwordEditTxtSU"
        android:layout_width="299dp"
        android:layout_height="36dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:drawableStart="@drawable/password_signup"
        android:drawablePadding="5dp"
        android:maxLength="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTxt2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/confirmPassEditTxt"
        android:layout_width="299dp"
        android:layout_height="36dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:drawableStart="@drawable/password_signup"
        android:drawablePadding="5dp"
        android:maxLength="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTxt3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/passTxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/confirmpass"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxtSU"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/genderTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileEditTxt"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/birthdateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/birthdate"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/lastNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/lastN"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditTxt"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/mobileNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/mobile"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditTxt"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/emailTxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bdayEditText"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/passTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddEditTxtSU"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/emailAddEditTxtSU"
        android:layout_width="297dp"
        android:layout_height="36dp"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="example@gmail.com"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="5dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/signup"
        android:textColor="@color/darkbluegreen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/firstNameEditTxt"
        android:layout_width="296dp"
        android:layout_height="36dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/firstNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/firstN"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt"
        app:layout_constraintVertical_bias="0.015" />

    <EditText
        android:id="@+id/lastNameEditTxt"
        android:layout_width="296dp"
        android:layout_height="36dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTxt"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mobileEditTxt"
        android:layout_width="297dp"
        android:layout_height="36dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:drawableStart="@drawable/phone_icon"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumTxt"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/backBtnSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/back_arrow" />

    <TextView
        android:id="@+id/signinBtnSUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/signin"
        android:textColor="@color/darkbluegreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/nextBtn"
        app:layout_constraintVertical_bias="0.189" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="295dp"
        android:layout_height="23dp"
        android:orientation="horizontal"
        android:checkedButton="@id/maleRadioBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTxt"
        app:layout_constraintVertical_bias="0.0">


        <RadioButton
            android:id="@+id/maleRadioBtn"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/male"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/genderRadioGroup"
            app:layout_constraintTop_toTopOf="@+id/genderRadioGroup"
            app:layout_constraintVertical_bias="0.55" />

        <RadioButton
            android:id="@+id/femaleRadioBtn"
            android:layout_width="90dp"
            android:layout_height="19dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/female"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/genderRadioGroup"
            app:layout_constraintEnd_toEndOf="@+id/genderRadioGroup"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/genderRadioGroup"
            app:layout_constraintTop_toTopOf="@+id/genderRadioGroup"
            app:layout_constraintVertical_bias="0.55" />
    </RadioGroup>

    <EditText
        android:id="@+id/bdayEditText"
        android:layout_width="297dp"
        android:layout_height="36dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="date"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:drawableStart="@drawable/bday_icon"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdateTxt"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/show_passImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".5"
        android:onClick="ShowHidePass"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditTxtSU"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTxtSU"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTxtSU"
        app:layout_constraintTop_toTopOf="@+id/passwordEditTxtSU"
        app:srcCompat="@drawable/show_passwordicon" />

    <ImageView
        android:id="@+id/show_confirmPassImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".5"
        android:onClick="ShowHideConfirmPass"
        app:layout_constraintBottom_toBottomOf="@+id/confirmPassEditTxt"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassEditTxt"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="@+id/confirmPassEditTxt"
        app:layout_constraintTop_toTopOf="@+id/confirmPassEditTxt"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/show_passwordicon" />

</androidx.constraintlayout.widget.ConstraintLayout>