<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gold2_bo"
        tools:context=".PremiumAppBO.SubscriptionTerms">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.042"
            app:srcCompat="@drawable/pakigsabot_logo_bo" />

        <TextView
            android:id="@+id/txt17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Subscription Terms"
            android:textColor="@color/gold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/termsTxt"
            android:layout_width="281dp"
            android:layout_height="236dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/subscriptionTerms"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt17"
            app:layout_constraintVertical_bias="0.031" />

        <TextView
            android:id="@+id/removalLabelTxt"
            android:layout_width="57dp"
            android:layout_height="24dp"
            android:fontFamily="@font/poppins_light"
            android:text="Removal"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsTxt"
            app:layout_constraintVertical_bias="0.017" />

        <TextView
            android:id="@+id/removalTxt"
            android:layout_width="280dp"
            android:layout_height="136dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/removal"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/removalLabelTxt"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/disclaimerLabelTxt"
            android:layout_width="71dp"
            android:layout_height="24dp"
            android:fontFamily="@font/poppins_light"
            android:text="Disclaimer"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/removalTxt"
            app:layout_constraintVertical_bias="0.042" />

        <TextView
            android:id="@+id/disclaimerTxt"
            android:layout_width="276dp"
            android:layout_height="208dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/disclaimer"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disclaimerLabelTxt"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/goPremiumBtn"
            android:layout_width="230dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/gold"
            android:fontFamily="@font/poppins_medium"
            android:text="Go Premium"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disclaimerTxt"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>